# biblioteca

./: README.md  first_flask.py  meu_banco.sqlite  pyproject.toml
.env/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
src/: app.py
src/instance/: db_biblioteca.sqlite
templates/: base.html  index.html  login.html  user.html  view.html
